# Agent-Plus

./: .gitignore  2.md  abstract.py  client.py  config.py  constants.py  encrypt.py  history.py  main.py  messages.py  process.py  prompt.md  pyproject.toml  requirements.txt  try.py  ui.py  widgets.py
#/: app.py  main.py  mcp_server.py
collect/: __init__.py  collector.pyi
deepseek/: abstract.py  client.py  config.py  encrypt.py
parts/: __init__.py  parser.pyi
tests/: data.sse  sse.py  widgets.py
widgets/: base.py  config.py  field.py  runtime.py  stack.py  window.py
