[project]
name = "Agent-Plus"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DogeCN", email = "hark2009lbf@outlook.com"},
]
dependencies = ["requests>=2.33.1", "wasmtime>=44.0.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
